# stylish_weather_web_app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  stylish_weather_app_db
app/: main.py
app/crud/: history_crud.py
app/db/: session.py
app/models/: history_model.py
app/schemas/: history_schema.py
app/services/: open_meteo_service.py
app/static/css/: style.css
app/static/js/: script.js
app/static/templates/: script.js
app/templates/: index.html
tests/: conftest.py  test_api.py  test_crud.py  test_services.py
