[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stylish_weather_web_app"
version = "0.1.0"
requires-python = ">= 3.10"

[tool.setuptools.packages.find]
where = ["."] # ищем в текущей дир
include = [ "app"] # включаем все что начинается с app

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto" 
asyncio_default_fixture_loop_scope = "function"